# Med-Triage

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: gradio_app.py  llm_agent.py  multi_agent_triage.py  play.py
reports/: Discharge_Report_P001_1775667863.md  Discharge_Report_P002_1775667863.md  Discharge_Report_P003_1775667863.md  Discharge_Report_P004_1775667863.md  Discharge_Report_P005_1775667863.md  Discharge_Report_P006_1775667863.md  Discharge_Report_P007_1775667863.md  Discharge_Report_P008_1775667863.md  Discharge_Report_P009_1775667863.md  Discharge_Report_P010_1775667863.md
scripts/: benchmark.py  dummy_agent_eval.py
server/: app.py
tests/envs/: test_triage_environment.py
triage_env/: __init__.py  client.py  models.py  patients.py
triage_env/data/: patients.json
triage_env/server/: __init__.py  app.py  requirements.txt  rubrics.py  triage_environment.py
